[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/tankBody_bigRed.png" type="Texture" id=1]
[ext_resource path="res://objects/Tank.gd" type="Script" id=2]
[ext_resource path="res://sprites/tankBlue_barrel1.png" type="Texture" id=3]
[ext_resource path="res://sprites/shotLarge.png" type="Texture" id=4]
[ext_resource path="res://sprites/shotRed.png" type="Texture" id=5]
[ext_resource path="res://sprites/shotOrange.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Fire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFire:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteFire:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 24, 11 ), Vector2( 24, 9 ), Vector2( 25, 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Tank" type="KinematicBody2D"]
z_index = 20
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -12.75, -17.5, -18.5, -11.25, -18, 13.5, -12, 17.75, 12.5, 18, 19, 13.75, 19, -12, 12.75, -18 )

[node name="SpriteBody" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Barrel" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Barrel"]
position = Vector2( 20, 0 )
rotation = -1.5708
texture = ExtResource( 3 )
offset = Vector2( -0.0324097, -9.18348 )

[node name="Muzzle" type="Position2D" parent="Barrel"]
position = Vector2( 24.1028, -0.205402 )

[node name="SpriteFire" type="Sprite" parent="Barrel"]
visible = false
position = Vector2( 24, 11 )
rotation = -1.5708
texture = ExtResource( 4 )
centered = false

[node name="AnimationFire" type="AnimationPlayer" parent="Barrel"]
playback_speed = 2.0
anims/Fire = SubResource( 1 )
